<resources>
    <string name="app_name">乐乐音乐</string>
    <string name="back_tip">再按一次返回桌面</string>
    <string name="exit_tip">程序出现异常,即将退出！</string>
    <string name="tip_title">温馨提示</string>

    <string name="title_icon">&#xe8a3;</string>
    <string name="title_menu">&#xe608;</string>
    <string name="title_user">我的</string>
    <string name="title_last_song">新歌</string>
    <string name="title_recommend">排行</string>
    <string name="title_special">歌单</string>
    <string name="title_search">&#xe600;</string>

    <string name="def_text">乐乐音乐 就是任性</string>
    <string name="def_artist">乐乐音乐</string>
    <string name="def_songName">就是任性</string>
    <string name="copyright">Copyright ©2015-%s zhangliangming All Rights Reserved</string>

    <string name="loadmore">点击加载更多</string>
    <string name="loading">正在加载...</string>
    <string name="nomore">已经到底了</string>
    <string name="nodata">数据为空</string>
    <string name="about_app">关于乐乐</string>
    <string name="help_txt">帮助与反馈</string>
    <string name="clear_cache_txt">清除缓存</string>
    <string name="clear_cache_tip">确定清空全部缓存?</string>
    <string name="desktoplrc_tip">该功能，需要手动向APP申请权限。\n1.进入设置>更多应用>乐乐音乐>权限管理>显示悬浮窗\n\n2.开启允许</string>
    <string name="locklrc_tip">1.部分机型需要开启锁屏显示权限，如锁屏后歌词没有显示，请按照如下步骤开启权限：\n\n2.进入设置>更多应用>乐乐音乐>权限管理>锁屏显示\n\n3.开启允许</string>
    <string name="storage_tip">该权限是APP的基本权限，为了不影响APP正常运作，需要手动向APP申请权限。\n1.进入设置>更多应用>乐乐音乐>权限管理>读写存储\n\n2.开启允许</string>

    <string name="exit_app_tip">是否退出应用？</string>

    <!-- tab my -->
    <string name="tab_localmusic">本地音乐</string>
    <string name="tab_like">喜欢</string>
    <string name="tab_download">下载</string>
    <string name="tab_recent">最近</string>
    <string name="tab_search">搜索</string>
    <string name="tab_wifi">仅wifi联网</string>
    <string name="tab_wifi_img">&#xe8a0;</string>
    <string name="tab_desktoplrc">桌面歌词</string>
    <string name="tab_desktoplrc_img">&#xe89f;</string>
    <string name="tab_locklrc">锁屏歌词</string>
    <string name="tab_locklrc_img">&#xe884;</string>
    <string name="tab_hello">问候语</string>
    <string name="tab_hello_img">&#xe8a2;</string>
    <string name="tab_control">耳机线控</string>
    <string name="tab_control_img">&#xe8a1;</string>
    <string name="tab_setting">设置</string>
    <string name="tab_setting_img">&#xe63c;</string>
    <string name="tab_close">退出</string>
    <string name="tab_close_img">&#xe66a;</string>
    <string name="tab_tool">相关工具</string>
    <string name="tab_tool_img">&#xe61d;</string>
    <string name="lrc_converter">歌词转换器</string>
    <string name="lrc_converter_img">&#xe75b;</string>
    <string name="select_file">选择文件</string>
    <string name="make_lrc">歌词制作器</string>
    <string name="make_lrc_img">&#xe62e;</string>
    <string name="lrc_to_video">歌词图片生成器</string>
    <string name="lrc_to_video_img">&#xe646;</string>
    <string name="mv_img">&#xe604;</string>
    <string name="like_tip_text">已添加收藏</string>
    <string name="unlike_tip_text">取消成功</string>
    <string name="remove_success_tip_text">移除成功</string>

    <string name="download_tip_text">已添加到下载</string>
    <string name="undownload_tip_text">歌曲已添加!</string>

    <string name="timer_power_off">定时关闭</string>
    <string name="timer_power_off_img">&#xe688;</string>
    <string name="timer_close_text">定时功能未启动</string>
    <string name="timer_open_text">%s后，将停止播放歌曲</string>
    <string name="timer_close">关闭</string>
    <string name="timer_10">10分钟</string>
    <string name="timer_20">20分钟</string>
    <string name="timer_30">30分钟</string>
    <string name="timer_60">1小时</string>
    <string name="timer_def">自定义</string>
    <string name="timer_setting_time">请设置关闭时间</string>

    <string name="sure_img">&#xe713;</string>
    <string name="no_net_img">&#xe62d;</string>
    <string name="loading_img">&#xe68e;</string>

    <string name="title_cancel">取消</string>
    <string name="clean_img">&#xe63f;</string>
    <string name="scan_img">&#xe640;</string>
    <string name="close_img">&#xe689;</string>


    //更多菜单
    <string name="downloadpause_img">&#xe605;</string>
    <string name="downloading_img">&#xe6de;</string>
    <string name="detail_img">&#xe601;</string>
    <string name="delete_img">&#xe76b;</string>
    <string name="like_img">&#xe616;</string>
    <string name="liked_img">&#xe628;</string>
    <string name="more_img">&#xe602;</string>

    //文件返回上一级
    <string name="file_back">&#xe614;</string>
    <string name="file_name">&#xe65a;</string>
    <string name="file_directory">&#xe662;</string>

    //字体
    <string name="ziti_jia">&#xe6f9;</string>
    <string name="ziti_jian">&#xe6f6;</string>

    //播放模式
    <string name="mode_all">&#xe630;</string>
    <string name="mode_all_text">顺序播放</string>
    <string name="mode_random">&#xe660;</string>
    <string name="mode_random_text">随机播放</string>
    <string name="mode_single">&#xe62f;</string>
    <string name="mode_single_text">单曲播放</string>

    //歌词
    <string name="reset">还原了</string>
    <string name="second">秒</string>
    <string name="seek_lrc_warntip">请先播放歌曲</string>


    //歌词窗口
    <string name="search_singer_text">写真搜索</string>
    <string name="search_lrc_text">歌词搜索</string>
    <string name="song_info_text">歌曲详情</string>
    <string name="make_lrc_text">制作歌词</string>
    <string name="lrc_progress_text">歌词进度</string>
    <string name="font_size_text">字体大小</string>
    <string name="font_color_text">字体颜色</string>
    <string name="select_singer_text">请选择歌手</string>
    <string name="select_song_text">请选择歌曲</string>
    <string name="play_song_text">请先播放歌曲</string>
    <string name="setting_song_text">歌词设置成功</string>
    <string name="edit_lrc_text">编辑歌词</string>
    <string name="play_lrc_text">敲打节奏</string>
    <string name="pre_lrc_text">预览歌词</string>
    <string name="select_lrc_text">选择歌词</string>
    <string name="check_lrc_text">请检测歌词是否有误</string>
    <string name="lrc_null_text">请输入歌词!</string>
    <string name="close_lrc_text">退出后本页面数据将丢弃!</string>
    <string name="unfinish_lrc_text">歌词录制完成才可以预览!</string>
    <string name="make_lrc_success">歌词保存成功!</string>
    <string name="make_lrc_error">歌词保存失败!</string>
    <string name="extra_lrc_1">翻译歌词</string>
    <string name="extra_lrc_2">音译歌词</string>
    <string name="def_lrc_null">请先制作歌词</string>

    //歌曲详情窗口
    <string name="singer_text">歌手</string>
    <string name="fileext_text">格式</string>
    <string name="time_text">时长</string>
    <string name="filesize_text">大小</string>

    <string name="unknow">未知</string>
    <string name="loading_tip">正在加载数据，请稍候...</string>
    <string name="input_key">请输入关键字</string>

    <string name="help_tip">Git：https://github.com/zhangliangming\nGithub：https://zhangliangming.github.io/\n简书：https://www.jianshu.com/u/1c6b49fb806b\nCSDN：https://mp.csdn.net/\n安卓巴士：http://www.apkbus.com/?278062\n联系方式：316257874@qq.com\n声明：仅用于学习用途</string>

    //下载
    <string name="downloading_text">下载中</string>
    <string name="downloaded_text">下载完成</string>
    <string name="download_pause_text">点击暂停</string>
    <string name="download_wait_text">等待下载</string>
    <string name="download_goon_text">点击继续下载</string>

    //字幕
    <string name="subtitle_switch_text">字幕开关</string>

</resources>
