<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/title_height"
    android:background="@color/defColor">

    <ImageView
        android:id="@+id/backImg"
        android:layout_width="@dimen/title_img_size"
        android:layout_height="27dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="5dp"
        android:background="@drawable/back_button"
        android:clickable="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_toLeftOf="@+id/right_flag"
        android:layout_toRightOf="@+id/backImg">

        <com.zlm.hp.widget.IconfontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="6dp"
            android:text="@string/title_search"
            android:textColor="#fff"
            android:textSize="25dp" />

        <com.zlm.hp.widget.SearchEditText
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:hint="@string/input_key"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:paddingLeft="35dp"
            android:paddingRight="36dp"
            android:singleLine="true"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textCursorDrawable="@drawable/edit_cursor"
            android:textSize="15dp" />


        <com.zlm.hp.widget.IconfontTextView
            android:id="@+id/clean_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="6dp"
            android:text="@string/clean_img"
            android:textColor="#fff"
            android:textSize="25dp"
            android:visibility="invisible" />

    </RelativeLayout>


    <TextView
        android:id="@+id/right_flag"
        android:layout_width="@dimen/title_height"
        android:layout_height="@dimen/title_height"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/tab_search"
        android:textColor="#fff"
        android:textSize="@dimen/title_size"></TextView>


</RelativeLayout>
