<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/status_bar_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bar_height">

            <com.zlm.hp.widget.IconfontTextView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="10dp"
                android:text="@string/title_icon"
                android:textColor="#FFF"
                android:textSize="@dimen/title_icon_size" />

            <com.zlm.hp.widget.IconfontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/icon"
                android:text="@string/app_name"
                android:textColor="#FFF"
                android:textSize="@dimen/title_icon_size" />

        </RelativeLayout>

        <View
            android:id="@+id/header_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/header"
            android:background="#50ffffff"></View>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/footer"
            android:layout_below="@+id/header_line"
            android:fillViewport="true"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.zlm.hp.widget.WhiteTranRelativeLayout
                    android:id="@+id/timer_power_off_ll"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/title_setting_height"
                    android:clickable="true"
                    android:orientation="horizontal">

                    <com.zlm.hp.widget.IconfontTextView
                        android:id="@+id/timer_power_off_img"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/timer_power_off_img"
                        android:textColor="#FFF"
                        android:textSize="@dimen/title_icon_size" />

                    <com.zlm.hp.widget.IconfontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@+id/timer_power_off_img"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/timer_power_off"
                        android:textColor="#FFF"
                        android:textSize="@dimen/title_setting_icon_size" />

                    <TextView
                        android:id="@+id/timer_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:textColor="#FFF"
                        android:textSize="@dimen/title_icon_size" />

                </com.zlm.hp.widget.WhiteTranRelativeLayout>

                <com.zlm.hp.widget.WhiteTranLinearLayout
                    android:id="@+id/tool_ll"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/title_setting_height"
                    android:clickable="true"
                    android:orientation="horizontal">

                    <com.zlm.hp.widget.IconfontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/tab_tool_img"
                        android:textColor="#FFF"
                        android:textSize="@dimen/title_icon_size" />

                    <com.zlm.hp.widget.IconfontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/tab_tool"
                        android:textColor="#FFF"
                        android:textSize="@dimen/title_setting_icon_size" />

                </com.zlm.hp.widget.WhiteTranLinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/header"
                    android:background="#50ffffff"></View>

                <com.zlm.hp.widget.WhiteTranRelativeLayout
                    android:id="@+id/wifi_lr"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/title_setting_height"
                    android:clickable="true">

                    <com.zlm.hp.widget.IconfontTextView
                        android:id="@+id/tab_wifi_img"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/tab_wifi_img"
                        android:textColor="#FFF"
                        android:textSize="@dimen/title_icon_size" />

                    <com.zlm.hp.widget.IconfontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@+id/tab_wifi_img"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/tab_wifi"
                        android:textColor="#FFF"
                        android:textSize="@dimen/title_setting_icon_size" />


                    <com.suke.widget.SwitchButton
                        android:id="@+id/wifi_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="5dp"
                        app:sb_checked_color="@color/defColor" />

                </com.zlm.hp.widget.WhiteTranRelativeLayout>

                <com.zlm.hp.widget.WhiteTranRelativeLayout
                    android:id="@+id/desktoplrc_lr"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/title_setting_height"
                    android:clickable="true">

                    <com.zlm.hp.widget.IconfontTextView
                        android:id="@+id/tab_desktoplrc_img"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/tab_desktoplrc_img"
                        android:textColor="#FFF"
                        android:textSize="@dimen/title_icon_size" />

                    <com.zlm.hp.widget.IconfontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@+id/tab_desktoplrc_img"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/tab_desktoplrc"
                        android:textColor="#FFF"
                        android:textSize="@dimen/title_setting_icon_size" />

                    <com.suke.widget.SwitchButton
                        android:id="@+id/desktoplrc_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="5dp"
                        app:sb_checked_color="@color/defColor" />

                </com.zlm.hp.widget.WhiteTranRelativeLayout>

                <com.zlm.hp.widget.WhiteTranRelativeLayout
                    android:id="@+id/locklrc_lr"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/title_setting_height"
                    android:clickable="true">

                    <com.zlm.hp.widget.IconfontTextView
                        android:id="@+id/tab_locklrc_img"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/tab_locklrc_img"
                        android:textColor="#FFF"
                        android:textSize="@dimen/title_icon_size" />

                    <com.zlm.hp.widget.IconfontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@+id/tab_locklrc_img"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/tab_locklrc"
                        android:textColor="#FFF"
                        android:textSize="@dimen/title_setting_icon_size" />

                    <com.suke.widget.SwitchButton
                        android:id="@+id/locklrc_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="5dp"
                        app:sb_checked_color="@color/defColor" />


                </com.zlm.hp.widget.WhiteTranRelativeLayout>


            </LinearLayout>
        </ScrollView>

        <RelativeLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_setting_height"
            android:layout_alignParentBottom="true">

            <View
                android:id="@+id/footer_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#50ffffff"></View>

            <LinearLayout
                android:id="@+id/setting_ll"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/footer_line"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:orientation="horizontal">

                <com.zlm.hp.widget.IconfontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/tab_setting_img"
                    android:textColor="#FFF"
                    android:textSize="@dimen/title_icon_size" />

                <com.zlm.hp.widget.IconfontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/tab_setting"
                    android:textColor="#FFF"
                    android:textSize="@dimen/title_setting_icon_size" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/exit_ll"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/footer_line"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:orientation="horizontal">

                <com.zlm.hp.widget.IconfontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/tab_close_img"
                    android:textColor="#FFF"
                    android:textSize="@dimen/title_icon_size" />

                <com.zlm.hp.widget.IconfontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/tab_close"
                    android:textColor="#FFF"
                    android:textSize="@dimen/title_setting_icon_size" />

            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>
